# alvolo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_action_items_related.py  0003_file_attachment.py  0004_remind_at.py  0005_push_subscription.py
backend/app/: __init__.py  auth.py  config.py  db.py  events.py  main.py  models.py  push.py  retrieval.py  schemas.py  storage.py
backend/app/api/: ask.py  capture.py  events.py  export.py  items.py  push.py  stats.py
backend/app/worker/: audio.py  claude.py  enrich.py  extract.py  images.py  queue.py  relate.py
backend/tests/: test_api.py  test_images.py
extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js  shared.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: custom-sw.js
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AskBox.tsx  AudioPlayer.tsx  AuthImage.tsx  BrandMark.tsx  ItemCard.tsx  Skeleton.tsx  StatusBadge.tsx  SwipeableRow.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx  textarea.tsx
frontend/src/lib/: auth.ts  offlineQueue.ts  push.ts  theme.ts
frontend/src/pages/: Ask.tsx  Capture.tsx  Inbox.tsx  ItemDetail.tsx  Settings.tsx  Stats.tsx
shortcut/: AlVolo.md
